fixed image overflowing container on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -106,12 +106,13 @@ $info-box-font-size: 15px;
 
 .contact-info{
     padding-top: 30px;
+    overflow:hidden;
     
 }
 .contact-info-form{
 
     padding-top: 30px;
-    padding-left: 0;
+    padding-left: 25px;
     
 }
 
